# axum_ms

./: .gitignore  README.md  docker-compose.yml  insert_fake_db.py  kafka_producer.py  ready data.xlsx  rest.rest  test_api.ipynb
axum_api_gw/: Cargo.toml  Dockerfile  README.md  rest.rest
axum_api_gw/src/: main.rs  mware.rs  user_routes.rs
axum_api_gw/src/unit_tests/: unit_tests.rs
axum_diary_server/: Cargo.toml
axum_diary_server/src/diary/application_layer/: mod.rs
axum_diary_server/src/diary/domain_layer/: appointment.rs  callback.rs  inspection.rs  maintenance.rs  mod.rs  note.rs  public_holiday.rs  sick_leave.rs  staff_holiday.rs  staff_meeting.rs  training.rs  valuation.rs  viewing.rs
axum_image_upload/: Cargo.toml
axum_landlord_server/: Cargo.toml
axum_landlord_server/src/: main.rs
axum_property_server/: Cargo.toml  rest.rest
axum_property_server/src/: main.rs
axum_property_server/uploadedimg/: images-20e9c316-0a95-4c8f-9c7e-b7eb981660be.avif  images-2c2aedc6-6ee9-421c-ab20-3bf5914e1b0b.avif  images-2d6e9b45-d058-485b-9078-f5e8bfecaac8.avif  images-c16229bf-4933-4983-816a-6cf97c916437.avif  images-da881cc2-e809-45a7-b29f-30cc1fe12b9a.avif  images-dc222e03-da17-44a8-b1cd-0f71f8b42b35.avif  images-f570b451-a4e4-47df-ae5c-1f073d9939c3.avif
axum_user_server/: Cargo.toml  Dockerfile  README.md  rest.rest
axum_user_server/src/: main.rs
client/: bun.lockb  package.json
client/src/components/: Nav.tsx
client/src/css/: app.css  lettings.module.css
client/src/routes/: index.tsx  lettings.tsx
frontend/: Cargo.toml
frontend/src/: main.rs
(+43 files in other folders)
