[package]
name = "axum_api_gw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = "1.0.196"
jsonwebtoken = "9.2.0"
dotenv = "0.15"
chrono = "0.4.33"
http = "1.0.0"
tower-http = { version = "0.5.1", features = ["cors"] }
tokio = { version = "1.35.1", features = ["full"] }
axum-macros = "0.4.1"
hyper = { version = "1.1.0", features = ["full"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.3", features = ["full"] }
tower-cookies = "0.10.0"
deadpool-redis = "0.13.0"
redis = { version = "0.23.3", features = ["tokio-native-tls-comp"] }
axum-test = "14.3.0"
serde_json = "1.0.114"